Recipe model, recipe list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <div class="mainContainer">
-ssssss
+    <app-recipes></app-recipes>
+    <app-shopping-list> </app-shopping-list>
 </div>
 <router-outlet></router-outlet>
