--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<div class="headerContainer">
+    <div class="brand">
+        <a href="#">Recipe Book</a>
+    </div>
+    <div class="navbar">
+        <a href="#">Recipes</a>
+        <a href="#">Shopping List</a>
+    </div>
+</div>
