--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,1 +1,14 @@
-<p>recipe-list works!</p>
+<div>
+    <button>New Recipe</button>
+</div>
+<div class="recipeListContainer">
+    <div *ngFor="let recipe of recipes" class="recipe">
+        <div class="recipeName">{{recipe.name}}</div>
+        <img
+            [src]="recipe.imagePath"
+            alt="{{recipe.name}}"
+        >
+        <div class="recipeDescription">{{recipe.description}}</div>
+    </div>
+    <app-recipe-item></app-recipe-item>
+</div>
