--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,1 +1,4 @@
-<p>recipes works!</p>
+<div class="recipesContainer">
+    <app-recipe-list></app-recipe-list>
+    <app-recipe-detail></app-recipe-detail>
+</div>
