Recipe detail, recipe list, shopping list

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,1 +1,11 @@
-<p>recipe-detail works!</p>
+
+<div class="recipeListContainer">
+    <div class="recipeName">name</div>
+    <img src="" alt="">
+    <div class="recipeDescription">description</div>
+    <div>
+        <button>To Shopping List</button>
+        <button>Edit Recipe</button>
+        <button>Delete Recipe</button>
+    </div>
+</div>
