--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,1 +1,14 @@
-<p>shopping-edit works!</p>
+<p>Shopping edit</p>
+<form>
+    <div class="inputGroup">
+        <label for="name">Name</label>
+        <input type="text" id="name">
+    </div>
+    <div class="inputGroup">
+        <label for="amount">Amount</label>
+        <input type="number" id="amount">
+    </div>
+    <button>Add</button>
+    <button>Delete</button>
+    <button>Clear</button>
+</form>
