--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -4,10 +4,7 @@
 <div class="recipeListContainer">
     <div *ngFor="let recipe of recipes" class="recipe">
         <div class="recipeName">{{recipe.name}}</div>
-        <img
-            [src]="recipe.imagePath"
-            alt="{{recipe.name}}"
-        >
+        <img class="recipeImage" [src]="recipe.imagePath" alt="{{recipe.name}}" >
         <div class="recipeDescription">{{recipe.description}}</div>
     </div>
     <app-recipe-item></app-recipe-item>
